(7) Fixed: Bug in cat_surf_vol2surf with mapping flag.
(8) Removed: cat_surf_surf2roi_resampled.m 
(9) Fixed: Bug in cat_surf_surf2roi with rdata field
(10) Changed: Removed csv output of ROIs for each dataset (only one xml file
     are saved)

------------------------------------------------------------------------
r954 | dahnke | 2016-06-20 12:44:20 +0200 (Mo, 20 Jun 2016) | 13 lines

Changed paths:
M       CHANGES.txt
M       cat_conf_stoolsexp.m
M       cat_io_report.m
M       cat_main.m
M       cat_surf_display.m
M       cat_surf_render.m
M       cat_tst_qa_cleaner.m

(1) Fixed:   Corrected CAT report colormap problem (blue brain) in case of 
             surface reconstruction.
(2) Changed: Color histogram in error report.

------------------------------------------------------------------------
r955 | gaser | 2016-06-20 22:39:15 +0200 (Mo, 20 Jun 2016) | 12 lines

Changed paths:
M       CHANGES.txt
M       Contents.m
M       cat_conf_long.m
M       cat_conf_stools.m
M       cat_defaults.m
M       cat_long_main.m
M       cat_long_multi_run.m
M       cat_main.m

Changed: Added option to save dartel exported images in longitudinal batch.

------------------------------------------------------------------------
r956 | gaser | 2016-06-21 10:27:19 +0200 (Di, 21 Jun 2016) | 12 lines

Changed paths:
M       CAT12-Manual.doc
M       CAT12-Manual.pdf
M       CHANGES.txt
M       Contents.m
M       cat_conf_extopts.m
MM      cat_stat_ROI.m
M       html/cat_methods_RBM.html
M       tbx_cfg_cat.m

Changed: Updated html text and manual.

------------------------------------------------------------------------

Changed paths:
M       CAT12-Manual.doc
M       CAT12-Manual.pdf
M       CHANGES.txt
M       cat_io_xml.m
M       cat_main.m
M       html/cat_methods_RBM.html

(1) Changed: Updated manual.
(2) Fixed: Error with flipped colorbars.
------------------------------------------------------------------------
r957 | gaser | 2016-06-21 13:10:32